--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -1,3 +1,270 @@
-.Navbar{
+ $colorbase : '#fff';
+
+ .Navbar{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    direction: rtl;
+    padding: 5px 10px;
+    box-shadow: 3px 5px 21px 4px #b8b8b81a;
+
+    .LoginItem{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 240px;
+        direction: ltr;
+
+        .Demo{
+            background: #f05a3c;
+            color:#f7f7f7;
+            padding: 10px 30px;
+            border-radius: 20px;
+            font-size: 17px;
+            transition: all .2s ease;
+            cursor: pointer;
+
+            &:hover{
+                opacity: .7;
+            }
+        }
+
+        .LogIn{
+            cursor: pointer;
+            font-size: 17px;
+
+            &:hover{
+                color: #f4836c;
+            }
+        }
+    }
+    .MenuItem{
+        display: flex;
+        justify-content: space-around;
+        width: 500px;
+
+        & > p{
+            cursor: pointer;
+            font-size: 17px;
+            transition: all .5s ease;
+            &:hover{
+                opacity: .9;
+            }
+        }
+
+        .subMenuItem{
+            position: absolute;
+            top: 55px;
+            right: 930px;
+            background: rgb(240, 240, 240);
+            padding: 10px 30px; 
+            opacity:0;
+            transition: all .25s all;
+
+            
+        }
+    }
 }
+.NameMenu:hover + .subMenuItem{
+    opacity: 1;
+    top: 75px;
+}
+.header{
+        display: flex;
+        justify-content: space-around;
+        direction: rtl;
+        padding-top: 30px;
+
+    .RightSection{
+        width: auto;
+        img{
+            width: 515px;
+        }
+    }
+    .LeftSection{
+        width: 400px;
+        direction: ltr;
+
+        & > h1{
+            font-size: 71px;
+        }
+
+        & > p{
+            color: #999999;
+            margin-bottom: 55px;
+            line-height: 30px;
+            font-size: 20px;
+        }
+
+        .HeaderInfo{
+            display: flex;
+            .EmailBtn{
+                width: 130px;
+                margin-right: 20px;
+                margin-left: 40px;
+                text-align: left;
+                padding: 10px 20px;
+                border: 1px solid grey;
+                border-radius: 5px;
+                cursor: pointer;
+                outline-color: #f05a3c;
+            }
+            .DemoBtn{
+                width: 170px;
+                padding: 18px 30px;
+                text-align: center;
+                border: 1px solid #9b4331;
+                border-radius: 5px;
+                background: transparent;
+                background: #f05a3c;
+                color: white;
+                cursor: pointer;
+                transition: all .25s ease;
+
+                &:hover{
+                    opacity: .7;
+                }
+            }
+        }
+        .HeaderPoint{
+            img {
+                margin-top: 35px;
+                margin-left: 40px;
+            }
+        }
+    }
+}
+.BrandSection{
+    background-color: #031b21;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+    margin-top: 100px;
+
+    h2{
+        color: white;
+        text-align: center;
+        margin-bottom: 80px;
+        padding-top: 60px;
+        font-size: 35px;
+    }
+    .Brands{
+        display: flex;
+        justify-content: space-around;
+        width: 1070px;
+        align-items: center;
+        margin-bottom: 60px;
+    }
+    button{
+        width: 215px;
+        padding: 10px;
+        cursor: pointer;
+        border-radius: 5px;
+        border: unset;
+        transition: all .25s ease;
+
+        &:hover{
+            opacity: .9;
+        }
+
+    }
+}
+.BlogPost{
+    margin-top: 115px;
+    .BlogPost-title{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        h3{
+            height: fit-content;
+            font-size: 50px;
+            width: 430px;
+        }
+        & > p{
+            width: 440px;
+            line-height: 30px;
+            font-size: 20px;
+            color: #767676;
+        }
+    }
+    .BlogPost-Item{
+            display: grid;
+            grid-template-columns: repeat(3 , 1fr);
+            justify-items: center;
+            grid-row-gap: 80px;
+            padding: 25px;
+            margin-top: 60px;
+
+        .BlogPost-content{
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            & > p{
+                width: 350px;
+                font-size: 18px;
+                color: #8e8e8e;
+                line-height: 30px;
+            }
+
+            & > h3{
+                font-size: 30px;
+                margin-bottom: unset;
+                cursor: pointer;
+                transition: all .25s ease;
+
+                &:hover{
+                    color: #c2750f;
+                }
+                
+            }
+        }
+
+    }
+
+}
+.sliderPost{
+    background-color: #e7e7e7;
+    padding: 40px 0 ;
+    .sliderPost-Info{
+        display: flex;
+        justify-content: space-around;
+    }
+    .sliderPost-title{
+        h3{
+            width: fit-content;
+            margin-left: 180px;
+            margin-bottom: 30px;
+            font-size: 25px;
+            width: 390px;
+            letter-spacing: 1px;
+
+            span{
+                color: #919191;
+            }
+        }
+    }
+    .sliderPost-Info-brands{
+        width: 650px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .sliderPostInfo-btn{
+        width: 190px;
+        background: #f05a3c;
+        color: white;
+        border: 1px solid #a3a3a3;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: all .25s ease;
+
+        &:hover{
+            opacity: .9;
+        }
+    }
+}
+
