--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -43,6 +43,29 @@
         justify-content: space-around;
         width: 500px;
 
+        @media (max-width:992px) {
+            transition: all .5s ease;
+            opacity: 0;
+            position: absolute;
+            flex-direction: column;
+            right: 0px;
+            visibility:hidden;
+            max-height:0px;
+            background: #ececec;
+            top: 0;
+            flex-direction: column;
+            height: 100vh;
+            text-align: center;
+            
+
+           &.openMenu{
+                opacity: 1;
+                visibility: visible;
+                max-height: 1000px;
+                right: 0;
+           }
+        }
+
         & > p{
             cursor: pointer;
             font-size: 17px;
@@ -65,6 +88,14 @@
         }
     }
 }
+.menuMobile{
+    display: none;
+    cursor: pointer;
+
+    @media (max-width:992px) {
+        display: block;
+    }
+}
 .NameMenu:hover + .subMenuItem{
     opacity: 1;
     top: 75px;
@@ -74,6 +105,11 @@
         justify-content: space-around;
         direction: rtl;
         padding-top: 30px;
+
+        @media (max-width:992px) {
+            flex-direction: column;
+            align-items: center;            
+        }
 
     .RightSection{
         width: auto;
@@ -85,8 +121,16 @@
         width: 400px;
         direction: ltr;
 
+        @media (max-width:992px) {
+            width: 100%;
+        }
+
         & > h1{
             font-size: 71px;
+
+            @media (max-width:992px) {
+                text-align: center;
+            }
         }
 
         & > p{
@@ -94,10 +138,19 @@
             margin-bottom: 55px;
             line-height: 30px;
             font-size: 20px;
+
+            @media (max-width:992px) {
+                text-align: center;
+            }
         }
 
         .HeaderInfo{
             display: flex;
+
+            @media (max-width:992px) {
+                justify-content: center;
+            }
+
             .EmailBtn{
                 width: 130px;
                 margin-right: 20px;
@@ -127,6 +180,12 @@
             }
         }
         .HeaderPoint{
+
+            @media (max-width:992px) {
+                display: flex;
+                justify-content: center;
+            }
+
             img {
                 margin-top: 35px;
                 margin-left: 40px;
@@ -155,6 +214,17 @@
         width: 1070px;
         align-items: center;
         margin-bottom: 60px;
+
+        @media (max-width:992px) {
+            justify-content: center;
+
+            .BrandItem{
+                margin-right: 10px;
+                 img{
+                     width: 75px;
+                 }
+            }
+        }
     }
     button{
         width: 215px;
@@ -177,16 +247,29 @@
         justify-content: space-around;
         align-items: center;
 
+        @media (max-width:992px) {
+            flex-direction: column;
+        }
+
         h3{
             height: fit-content;
             font-size: 50px;
             width: 430px;
+
+            @media (max-width:992px) {
+                width: 100%;
+                text-align: center;
+            }
         }
         & > p{
             width: 440px;
             line-height: 30px;
             font-size: 20px;
             color: #767676;
+
+            @media (max-width:992px) {
+                width: 80%;
+            }
         }
     }
     .BlogPost-Item{
@@ -196,6 +279,10 @@
             grid-row-gap: 80px;
             padding: 25px;
             margin-top: 60px;
+
+            @media (max-width:992px) {
+                grid-template-columns: repeat(2 , 2fr);
+            }
 
         .BlogPost-content{
             width: fit-content;
@@ -232,6 +319,11 @@
     .sliderPost-Info{
         display: flex;
         justify-content: space-around;
+
+        @media (max-width:992px) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
     .sliderPost-title{
         h3{
@@ -241,6 +333,12 @@
             font-size: 25px;
             width: 390px;
             letter-spacing: 1px;
+
+            @media (max-width:992px) {
+                margin-left: unset;
+                width: 100%;
+                text-align: center;
+            }
 
             span{
                 color: #919191;
@@ -252,6 +350,10 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
+        @media (max-width:992px) {
+            margin-bottom: 30px;
+        }
     }
     .sliderPostInfo-btn{
         width: 190px;
@@ -261,6 +363,10 @@
         border-radius: 5px;
         cursor: pointer;
         transition: all .25s ease;
+
+        @media (max-width:992px) {
+            padding: 15px 0;
+        }
 
         &:hover{
             opacity: .9;
