--- a/src/component/style.scss
+++ b/src/component/style.scss
@@ -492,4 +492,153 @@
     }    
 }
 
+.FormSection{
+    display: flex;
+    background-color: #393939;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 100px;
+    margin-top: 50px;
+    .DescribeForm{
+        width: 400px;
+
+        h2{
+            font-size: 35px;
+            color:#e9e9e9;
+        }
+        p{
+            color: #afafaf;
+        }
+
+        ul{
+            margin-top: 60px;
+            list-style: decimal;
+
+            li{
+                color:#e9e9e9;
+                margin-bottom: 40px;
+                font-size: 20px;
+            }
+        }
+    }
+
+    .Form{
+        width: 500px;
+        height: 580px;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: #dadad8;
+
+        h4{
+            font-size: 30px;
+        }
+
+        .FormItem{
+            display: flex;
+            flex-direction: column;
+
+            input{
+                padding: 15px 10px;
+                border-radius: 5px;
+                border: 1px solid gray;
+                margin-top: 10px;
+                margin-bottom: 20px;
+                width: 300px;
+            }
+
+            label{
+                font-weight: bold;
+            }
+
+            button{
+                padding: 10px;
+                background: #f05a3c;
+                border: 1px solid gray;
+                border-radius: 5px;
+                cursor: pointer;
+                transition: all .5s ease-in-out;
+
+                &:hover{
+                    opacity: .8;
+                }
+            }
+        }
+    }
+}
+
+.footer{
+    margin-top: 40px;
+    .TopFooter{
+        display: grid;
+        grid-template-columns: repeat(4 ,1fr);
+        justify-items: center;
+
+        .col{
+            display: flex;
+            flex-direction: column;
+            text-align: left;
+
+            .Users{
+                display: flex;
+                align-items: center;
+                .UserImgFooter{
+                    margin-bottom: 10px;
+                    margin-left: 7px;
+                    img{
+                        width: 80px;
+                    }
+                }
+            }
+
+            h5{
+                font-size: 22px;
+                font-weight: bold;
+            }
+
+            a{
+                margin-bottom: 20px;
+                color: #6c6c6c;
+                font-size: 16px;
+                cursor: pointer;
+
+                &:hover{
+                    opacity: .8;
+                }
+            }
+        }
+    }
+    .bottoomFooter{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px 10px;
+        margin-top: 40px;
+
+        .socialmedia{
+            display: flex;
+            justify-content: space-between;
+            width: 100px;
+            svg{
+                width: 20px;
+                cursor: pointer;
+
+                &:hover{
+                    path{
+                        fill: #f05a3c;
+                    }
+                }
+            }
+        }
+
+        .copyRight{
+            span{
+                color: #6e6e6e;
+            }
+        }
+    }
+}
+
 
