--- a/src/TestComponent/style.scss
+++ b/src/TestComponent/style.scss
@@ -82,3 +82,117 @@
         }   
     }
 }
+.InfoCard{
+
+    h2{
+        text-align: center;
+        color: #454545;
+
+        span{
+            color: #6271f0;
+        }
+
+    }
+    & > p{
+        text-align: center;
+        width: 35%;
+        margin: auto;
+    }
+    .userInfo{
+        display: flex;
+        direction: ltr;
+        justify-content: space-between;
+        align-items: center;
+        width: 80%;
+        margin: auto;
+        border-radius: 16px;
+        padding: 10px;
+        margin-top: 60px;
+        box-shadow: 0px 5px 7px 7px #e1e1e1;
+
+    
+
+        .user{
+            width: 40%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .userColor{
+                display: flex;
+                width: 100%;
+                margin-bottom: 25px;
+                justify-content: space-around;
+
+                p{
+                    cursor: pointer;
+                    background: #3a3a3a;
+                    color: white;
+                    padding: 7px 16px;
+                    border-radius: 10px;
+                    border: 1px solid black;
+                    
+                }
+            }
+
+            svg{
+                width: 200px;
+                
+            }
+        }
+        .Info{
+            width: 45%;
+            text-align: left;
+
+            h2{
+                text-align: left;
+            }
+            
+        }
+    }
+
+}
+.descUser{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 80%;
+    margin: 50px auto;
+
+    .Descs{
+        width: 515px;
+        box-shadow: 0px 1px 19px 9px #e3e3e3;
+        border-radius: 16px;
+        padding: 20px 10px;
+
+        .DescsItem{
+            margin-bottom: 20px;
+            span{
+                background: #fdc228;
+                padding: 5px 10px;
+                border-radius: 10px;
+                font-size: 10px;
+            }
+            .title{
+                color: black;
+                font-weight: bold;
+                font-size: 20px;
+                margin: 0;
+                margin-top: 5px;
+            }
+            .desc{
+                font-size: 10px;
+                color: #6f6f6f;
+            }
+        }
+    }
+
+    .userImage{
+        img{
+            width: 400px;
+            height: 400px;
+            box-shadow: 0 5px 10px 9px #e6e6e6;
+            border-radius: 16px;
+        }
+    }
+}
